lubelog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubelog
  namespace: lubelog
  labels:
    app.kubernetes.io/name: lubelog
    app.kubernetes.io/version: "1.7.3"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lubelog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lubelog
        app.kubernetes.io/version: "1.7.3"
    spec:
      serviceAccountName: lubelog-service-account
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext: {}
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: lubelog-pvc
      containers:
        - name: lubelog
          image: ghcr.io/hargata/lubelogger:v1.7.3
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: app-data
              mountPath: /App/data
              subPath: data
            - name: app-data
              mountPath: /root/.aspnet/DataProtection-Keys
              subPath: keys    
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
