lubelog/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lubelog-postgres
  namespace: lubelog
  labels:
    app.kubernetes.io/name: lubelog-postgres
    app.kubernetes.io/version: "1.7.3"
spec:
  serviceName: lubelog-postgres
  replicas: 1
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: lubelog-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lubelog-postgres
        app.kubernetes.io/version: "1.7.3"
    spec:
      serviceAccountName: lubelog-postgres-service-account
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        fsGroup: 999  # postgres group
      containers:
        - name: postgres
          image: postgres:18.3
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 999
            runAsGroup: 999
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 5432
              name: pg
              protocol: TCP
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER"
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER"
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER"
            failureThreshold: 3
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: pgdata
        labels:
          app.kubernetes.io/name: lubelog-postgres-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 2Gi
