lubelog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelog
  namespace: lubelog
  labels:
    app.kubernetes.io/name: lubelog
    app.kubernetes.io/version: "1.7.3"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lubelog
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
