lubelog/servicepostgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelog-postgres
  namespace: lubelog
  labels:
    app.kubernetes.io/name: lubelog-postgres
    app.kubernetes.io/version: "1.7.3"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: lubelog-postgres
  ports:
    - port: 5432
      name: pg
      protocol: TCP
