lubelog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lubelog
  namespace: lubelog
  labels:
    app.kubernetes.io/name: lubelog
    app.kubernetes.io/version: "1.6.1"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Track the fuel economy of your vehicles
    gethomepage.dev/group: K3S
    gethomepage.dev/icon: lubelogger.webp
    gethomepage.dev/name: LubeLogger
spec:
  tls:
    - hosts:
        - lubelog.petkus.id.lv
      secretName: lubelog-certificate-secret
  ingressClassName: nginx
  rules:
    - host: lubelog.petkus.id.lv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lubelog
                port:
                  number: 8080
